menambahkan section sliding untuk client section

--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
     </section>
     <!-- Akhir Section 2 -->
 
+    <!-- Awal Section 3 -->
+    <section class="section-clients mt-3 p-3">
+      <div class="container">
+        <!-- make sliding -->
+        <marquee>
+          <div class="row row-client">
+            <div class="col-6 col-sm-3">
+              <img src="./assets/image/clients/figma.png" alt="client-image">
+            </div>
+            <div class="col-6 col-sm-3">
+              <img src="./assets/image/clients/google-cloud.png" alt="client-image">
+            </div>
+            <div class="col-6 col-sm-3">
+              <img src="./assets/image/clients/microsoft.png" alt="client-image">
+            </div>
+            <div class="col-6 col-sm-3">
+              <img src="./assets/image/clients/wordpress.png" alt="client-image">
+            </div>
+          </div>
+        </marquee>
+        <!-- sliding -->
+      </div> 
+    </section>
+    <!-- Akhir Section 3 -->
+
     <script src="./assets/js/bootstrap.min.js"></script>
   </body>
 </html>
