memeperbaiki script html dan css

--- a/home.html
+++ b/home.html
@@ -84,8 +84,8 @@
         <div class="row-jumbotron row align-items-center">
           <div class="col-7">
             <div class="wrapper-headline">
-              <h1 class="headline-h1 mb-3">Pendanaan pertanian
-                <span class="">mudah dan terpercaya</span>
+              <h1 class="headline-h1 mb-3">Pendanaan pertanian <br>
+                <span class="span">mudah dan terpercaya</span>
               </h1>
               <div class="headline-paragraf">
                 Lorem ipsum dolor sit amet consectetur. Sed convallis maecenas nisi at diam ac amet. 
@@ -105,7 +105,6 @@
       </div>
     </section>
     <!-- Akhir Section 2 -->
-
 
     <!-- Awal Section 3 -->
     <section class="section">
@@ -197,7 +196,12 @@
 
     <!-- Awal Section 4 -->
     <section class="section-card mt-5">
-      <div class="container">
+      <div class="container content-card">
+        <p class="section-title">Our Features</p>
+        <h4 class="section-heading">The Best Features We Present</h4>
+        <p class="section-paragraf">Lorem ipsum dolor sit amet consectetur. Vitae nunc id iaculis <br> dictum ac magna condimentum.. </p>
+      </div>
+      <div class="container container-card mt-5">
         <div class="row">
           <div class="col-sm-4">
             <div class="card">
@@ -233,6 +237,51 @@
       </div>
     </section>
     <!-- Akhir Section 4 -->
+
+    <!-- Awal Section 5 -->
+    <section class="mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col description-text">
+            <h3>Pendanaan Pertanian Lebih Mudah Bersama <span class="span">E-mutan</span></h3>
+            <p>Pendanaan Pertanian Lebih Mudah Bersama Kami</p>
+          </div>
+        </div>
+
+        <div class="row row-content mt-5">
+          <!-- gambar kiri -->
+          <div class="col-sm-4">
+            <div class="col">
+              <p class="content-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae praesentium molestiae atque perferendis similique pariatur.
+              </p>
+            </div>
+            <div class="col">
+              <img class="image-left" src="./assets/image/sidekiri.png" width="100" alt="">
+            </div>
+          </div>
+
+          <!-- gambar tengah -->
+          <div class="col-sm-4">
+            <img class="image-center" src="./assets/image/mobile.png" alt="">
+          </div>
+
+          <!-- gambar kanan -->
+          <div class="col-sm-4">
+            <div class="col sideright-image">
+              <p class="content-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae praesentium molestiae atque perferendis similique pariatur.
+              </p>
+            </div>
+            <div class="col">
+              <img class="image-right" src="./assets/image/sidekanan.png" width="100" alt="">
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- Akhir Section 5 -->
 
     <!--  -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
