--- a/home.html
+++ b/home.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/customcss/home.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <!-- ionic icon -->
+    <!-- remixicon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   </head>
   <body>
     
@@ -209,7 +210,9 @@
                 <img src="./assets/image/card1.png" alt="">
                 <h5 class="card-title">Finance</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur. Turpis id tellus curabitur facilisis. Duis feugiat urna lacinia in a. Lectus suspendisse id at enim scelerisque libero rutrum porta. Ultrices sit et facilisi venenatis leo metus velit urna at.</p>
-                <a href="#" class="next-button">Go somewhere</a>
+                <div class="button">
+                  <a href="#" class="next-button">Learn more <i class="ri-arrow-right-line"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -219,7 +222,9 @@
                 <img src="./assets/image/card2.png" alt="">
                 <h5 class="card-title">System Management</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur. Turpis id tellus curabitur facilisis. Duis feugiat urna lacinia in a. Lectus suspendisse id at enim scelerisque libero rutrum porta. Ultrices sit et facilisi venenatis leo metus velit urna at.</p>
-                <a href="#" class="next-button">Go somewhere</a>
+                <div class="button">
+                  <a href="#" class="next-button">Learn more <i class="ri-arrow-right-line"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -229,7 +234,9 @@
                 <img src="./assets/image/card3.png" alt="">
                 <h5 class="card-title">Suistanable Market</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur. Turpis id tellus curabitur facilisis. Duis feugiat urna lacinia in a. Lectus suspendisse id at enim scelerisque libero rutrum porta. Ultrices sit et facilisi venenatis leo metus velit urna at.</p>
-                <a href="#" class="next-button">Go somewhere</a>
+                <div class="button">
+                  <a href="#" class="next-button">Learn more <i class="ri-arrow-right-line"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -239,7 +246,7 @@
     <!-- Akhir Section 4 -->
 
     <!-- Awal Section 5 -->
-    <section class="mt-5">
+    <section class="mt-5 py-5">
       <div class="container">
         <div class="row">
           <div class="col description-text">
@@ -248,33 +255,33 @@
           </div>
         </div>
 
-        <div class="row row-content mt-5">
+        <div class="row row-content py-5">
           <!-- gambar kiri -->
           <div class="col-sm-4">
-            <div class="col">
+            <div class="row left">
               <p class="content-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae praesentium molestiae atque perferendis similique pariatur.
               </p>
             </div>
-            <div class="col">
+            <div class="row right">
               <img class="image-left" src="./assets/image/sidekiri.png" width="100" alt="">
             </div>
           </div>
 
           <!-- gambar tengah -->
-          <div class="col-sm-4">
-            <img class="image-center" src="./assets/image/mobile.png" alt="">
+          <div class="col-sm-4 sidecenter-image">
+            <img class="image-center" src="./assets/image/mobile.png" width="150" alt="">
           </div>
 
           <!-- gambar kanan -->
           <div class="col-sm-4">
-            <div class="col sideright-image">
+            <div class="row right-description">
               <p class="content-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae praesentium molestiae atque perferendis similique pariatur.
               </p>
             </div>
-            <div class="col">
-              <img class="image-right" src="./assets/image/sidekanan.png" width="100" alt="">
+            <div class="row left-img">
+              <img class="image-left" src="./assets/image/sidekanan.png" width="100" alt="">
             </div>
           </div>
         </div>
